--- a/Omock_3/Omock_3.vcxproj
+++ b/Omock_3/Omock_3.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{89b4ffeb-b866-4ee1-8c98-5549ee71f486}</ProjectGuid>
-    <RootNamespace>Omock2</RootNamespace>
+    <ProjectGuid>{6f4cf805-776c-4d2d-a5d2-35db728b0211}</ProjectGuid>
+    <RootNamespace>Omock3</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -127,15 +127,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Design.h" />
-    <ClInclude Include="Function.h" />
-    <ClInclude Include="Unity.h" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Map.cpp" />
+    <ClCompile Include="Move.cpp" />
+    <ClCompile Include="Play.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Design.cpp" />
-    <ClCompile Include="Function.cpp" />
-    <ClCompile Include="main.cpp" />
-    <ClCompile Include="Unity.cpp" />
+    <ClInclude Include="Map.h" />
+    <ClInclude Include="Move.h" />
+    <ClInclude Include="Play.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
